--- a/install/Dockerfile.pandas
+++ b/install/Dockerfile.pandas
@@ -1,4 +1,5 @@
 FROM df-benchmarks
 
-RUN python3.9 -m pip install haversine
-RUN python3.9 -m pip install pandas=1.5.1
+RUN pip uninstall -y pandas
+
+RUN pip install pandas==2.1.4
