--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,22 @@
+ansicolors
 dask
 databricks==0.2
 distributed
-docker_py==1.10.6
+docker==6.1.3
+docker-pycreds==0.4.0
+geographiclib==2.0
+geopy==2.3.0
 h5py
-numpy
-pandas==1.5.1
-polars==0.16.13
+haversine==2.8.0
+matplotlib
+modin==0.26.1
+numpy==1.23.1
+pandas==2.1.4
+polars==0.19.19
 psutil==5.9.3
+pyarrow
 pydantic==1.10.2
 pydantic_factories==1.17.2
 pyspark==3.4.1
-ray==2.1.0
 unidist==0.2.2
-geographiclib==2.0
-geopy==2.3.0
-haversine==2.8.0
-ansicolors
-matplotlib
-modin==0.16.2
-pyarrow
-vaex==4.16.0
-git+https://github.com/h2oai/datatable
+urllib3
