--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,11 @@ pandas==2.1.4
 polars==0.19.19
 psutil==5.9.3
 pyarrow
-pydantic==1.10.2
-pydantic_factories==1.17.2
+pydantic==2.7.0
+pydantic_factories
 pyspark==3.4.1
 vaex==4.17.0
 unidist==0.2.2
 urllib3
+ray==2.10.0
+grpcio==1.62.1
